--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,6 @@ cbd_project/.DS_Store
 __pycache__
 Ourapp/__pycache__
 Ourapp/app/home/__pycache__
+Ourapp/app/__pycache__
 Ourapp/app/base/__pycache__
 Ourapp/error.log
